--- a/Assignment1/1A/Index.html
+++ b/Assignment1/1A/Index.html
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Our Coffee Shop</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Java Coffee Shop</title>
+    <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
+    
     <style>
-      /* Global Styles */
+  
 body {
   font-family: 'Montserrat', sans-serif;
-  background-color: #f5f5f5;
+  background-color: #BF9E87;
   color: #333;
 }
 
 /* Header Styles */
 header {
-  background-color: #4CAF50;
+  background-color: #513019;
   color: #fff;
   text-align: center;
   padding: 1em;
+}
+footer {
+  background-color: #513019;
+  color: #fff;
+  text-align: center;
+  padding: 1em;
+
 }
 
 header nav {
@@ -93,8 +100,8 @@ section#contact form {
 }
 
 section#contact form label {
-  font-size:
-
+  font-size: 10;
+}
     </style>
   </head>
   <body>
@@ -108,9 +115,9 @@ section#contact form label {
     </header>
     <main>
       <section id="about">
-        <h1>About Our Coffee Shop</h1>
+        <h1>About Java Coffee Shop</h1>
         <p>Welcome to our cozy coffee shop! We pride ourselves on serving the best coffee in town, made with only the freshest beans sourced from local farmers. Stop by and try one of our signature drinks, or grab a quick bite from our bakery selection.</p>
-        <img src="coffee-shop.jpg" alt="Our Coffee Shop">
+        <img src="image/logo.png" alt="Java Coffee Shop">
       </section>
       <section id="menu">
         <h1>Our Menu</h1>
@@ -135,11 +142,11 @@ section#contact form label {
       </section>
       <section id="location">
         <h1>Visit Us</h1>
-        <p>We are located at 123 Main Street, Anytown USA. Click <a href="https://www.google.com/maps?q=123+Main+Street+Anytown+USA">here</a> for directions.</p>
+        <p>We are located at 123 Main Street, <abbr title="Massachussetts">MA</abbr> was founded in 1948.</p> USA. Click <a href="https://www.google.com/maps?q=123+Main+Street+Anytown+USA">here</a> for directions.</p>
       </section>
     </main>
     <footer>
-      <p>Copyright © 2022 Our Coffee Shop</p>
+      <p>Copyright © 2023 Java Coffee Shop</p>
     </footer>
   </body>
 </html>
