--- a/Assignment1/1A/Contact.html
+++ b/Assignment1/1A/Contact.html
@@ -1,17 +1,186 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Contact Us</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="style.css">
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="menu.html">Menu</a>
-        <a href="location.html">Location</a>
-        <a href="#contact">Contact Us</a>
-      </nav>
-    </header
+
+
+<head>
+  <title>Contact Us</title>
+  <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  background-color: #BF9E87;
+  color: #333;
+}
+
+/* Header Styles */
+header {
+  background-color: #513019;
+  color: #fff;
+  text-align: center;
+  padding: 1em;
+}
+footer {
+  background-color: #513019;
+  color: #fff;
+  text-align: center;
+  padding: 1em;
+
+}
+
+header nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header nav a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.2em;
+  margin-left: 1em;
+}
+
+header nav a:hover {
+  color: #ffa900;
+}
+
+/* Main Section Styles */
+main {
+  padding: 2em;
+}
+
+section {
+  margin-bottom: 2em;
+}
+
+/* About Section Styles */
+section#about {
+  text-align: center;
+}
+
+section#about img {
+  width: 50%;
+  border-radius: 50%;
+  margin: 0 auto 2em;
+}
+
+/* Menu Section Styles */
+section#menu table {
+  border-collapse: collapse;
+  width: 100%;
+  margin: 2em auto;
+  text-align: left;
+}
+
+section#menu th, section#menu td {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+section#menu th {
+  background-color: #f2f2f2;
+}
+
+/* Location Section Styles */
+section#location {
+  text-align: center;
+}
+
+section#location p {
+  margin-bottom: 2em;
+}
+
+/* Contact Section Styles */
+section#contact {
+  text-align: center;
+}
+
+section#contact form {
+  margin: 2em auto;
+}
+
+section#contact form label {
+  font-size: 10;
+}
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    input[type=text],
+    select,
+    textarea {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+      margin-top: 6px;
+      margin-bottom: 16px;
+      resize: vertical;
+    }
+
+    button[type=submit] {
+      background-color: #AF9E87;
+      color: white;
+      padding: 12px 20px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    button[type=submit]:hover {
+      background-color: brown;
+    }
+
+    .container {
+      border-radius: 5px;
+      background-color:#FFEED7;
+      padding: 20px;
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <a href="index.html">Home</a>
+    </nav>
+  </header>
+  <h3>Contact Form</h3>
+
+  <div class="container">
+    <form action="/action_page.php">
+      <label for="fname">First Name</label>
+      <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+      <label for="lname">Last Name</label>
+      <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+      <label for="country">Country</label>
+      <select id="country" name="country">
+        <option value="australia">Australia</option>
+        <option value="canada">Canada</option>
+        <option value="usa">USA</option>
+      </select>
+
+      <label for="subject">Subject</label>
+      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+      <!-- <input type="submit" value="Submit"> -->
+      <button type="submit">Submit</button>
+    </form>
+  </div>
+
+  <footer>
+    <p>Copyright © 2023 Java Coffee Shop</p>
+  </footer>
+
+</body>
+
+</html>
