--- a/Assignment1/1B/destination.html
+++ b/Assignment1/1B/destination.html
@@ -3,6 +3,51 @@
 <title>Destination</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="style.css">
+<style>
+    form {
+  width: 50%;
+  margin: 0 auto;
+}
+
+label {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 10px;
+}
+
+input, textarea {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+}
+
+input[type="submit"] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+input[type="submit"] {
+  position: relative;
+  z-index: 2;
+}
+form {
+  margin-bottom: 100px;
+}
+
+
+</style>
 <body>
     <header>
         <nav>
@@ -35,7 +80,21 @@
             <button type="submit">Select</button>
         </div>
     </div>
-    
+    <div class="transparent-box">
+        <h2>Contact Us</h2>
+        <form action="submit-form.php" method="post">
+          <label for="name">Name</label>
+          <input type="text" id="name" name="name" required>
+  
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required>
+  
+          <label for="message">Message</label>
+          <textarea id="message" name="message" rows="5" required></textarea>
+  
+          <button type="submit">Submit</button>
+        </form>
+      </div>
     <footer>
         <p>Copyright © 2023 SoloSheExplores</p>
       </footer>
