--- a/Assignment1/1A/Contact.html
+++ b/Assignment1/1A/Contact.html
@@ -6,144 +6,8 @@
   <link rel="shortcut icon" href="image/favicon.ico" type="image/x-icon">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <style>
+  <link rel="stylesheet" type="text/css" href="style.css">
 
-body {
-  font-family: 'Montserrat', sans-serif;
-  background-color: #BF9E87;
-  color: #333;
-}
-
-/* Header Styles */
-header {
-  background-color: #513019;
-  color: #fff;
-  text-align: center;
-  padding: 1em;
-}
-footer {
-  background-color: #513019;
-  color: #fff;
-  text-align: center;
-  padding: 1em;
-
-}
-
-header nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-header nav a {
-  color: #fff;
-  text-decoration: none;
-  font-size: 1.2em;
-  margin-left: 1em;
-}
-
-header nav a:hover {
-  color: #ffa900;
-}
-
-/* Main Section Styles */
-main {
-  padding: 2em;
-}
-
-section {
-  margin-bottom: 2em;
-}
-
-/* About Section Styles */
-section#about {
-  text-align: center;
-}
-
-section#about img {
-  width: 50%;
-  border-radius: 50%;
-  margin: 0 auto 2em;
-}
-
-/* Menu Section Styles */
-section#menu table {
-  border-collapse: collapse;
-  width: 100%;
-  margin: 2em auto;
-  text-align: left;
-}
-
-section#menu th, section#menu td {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-
-section#menu th {
-  background-color: #f2f2f2;
-}
-
-/* Location Section Styles */
-section#location {
-  text-align: center;
-}
-
-section#location p {
-  margin-bottom: 2em;
-}
-
-/* Contact Section Styles */
-section#contact {
-  text-align: center;
-}
-
-section#contact form {
-  margin: 2em auto;
-}
-
-section#contact form label {
-  font-size: 10;
-}
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    input[type=text],
-    select,
-    textarea {
-      width: 100%;
-      padding: 12px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      box-sizing: border-box;
-      margin-top: 6px;
-      margin-bottom: 16px;
-      resize: vertical;
-    }
-
-    button[type=submit] {
-      background-color: #AF9E87;
-      color: white;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-
-    button[type=submit]:hover {
-      background-color: brown;
-    }
-
-    .container {
-      border-radius: 5px;
-      background-color:#FFEED7;
-      padding: 20px;
-    }
-  </style>
 </head>
 
 <body>
