--- a/Assignment1/1B/Index.html
+++ b/Assignment1/1B/Index.html
@@ -18,13 +18,13 @@
     </header>
     <main>
       <section id="about">
-        <h1 style="font-family: Comic Sans MS, Cursive;">About SoloSheExplores</h1>
+        <h1>About SoloSheExplores</h1>
         <p>Welcome to our website for solo female travelers! We've got your back with tips, tricks and advice to make your journey a blast! Don't worry about being alone, with our help you'll be the life of the party, even if it's just you and the locals. Let's make your solo trip unforgettable.</p>
         <p> Remember, life is short, but a solo trip is shorter... so make sure it's worth it!</p>
         <img src="image/logoD.jpg" alt="SoloSheExplores">
       </section>
       <section id="menu">
-        <h1 style="font-family: Comic Sans MS, Cursive; text-align: center;">Our PACKAGES</h1>
+        <h1 >Our PACKAGES</h1>
         <table>
           <tr>
             <th>Package</th>
@@ -45,7 +45,7 @@
         </table>
       </section>
       <div id="reviews">
-        <h2 style="font-family: Comic Sans MS, Cursive;">Reviews</h2>
+        <h1 >Reviews</h1>
         <div class="review-container">
             <div class="review">
                 <p class="review-text">"This was an amazing experience. The staff was friendly and the location was perfect."</p>
@@ -68,7 +68,7 @@
     
     
     <section id="featured" style="display: flex; align-items: center; flex-direction:column;">
-        <h2 style="font-family: Comic Sans MS, Cursive;">Featured Destination</h2>
+        <h1>Featured Destination</h1>
         <video width="320" height="240" controls>
             <source src="image\video.mp4" type="video/mp4">
             Your browser does not support the video tag.
