--- a/Assignment2/portfolio/index.html
+++ b/Assignment2/portfolio/index.html
@@ -56,6 +56,7 @@
               Based in the USA, I'm a front-end developer passionate about
               building accessible web apps that users love.
             </p>
+            
             <a href="#contact" class="hero__contact underline">Contact me</a>
           </div>
         </div>
@@ -146,8 +147,8 @@
               <span>JavaScript</span>
             </p>
             <div class="projects__links">
-              <a href="" class="underline">View Project</a>
-              <a href="" class="underline">View Code</a>
+              <a href="https://github.com/Sweta716/WebDevelopment/tree/002748707_ShwetaMishra" class="underline">View Project</a>
+              <a href="https://github.com/Sweta716/WebDevelopment/tree/002748707_ShwetaMishra" class="underline">View Code</a>
             </div>
           </div>
 
@@ -165,8 +166,8 @@
               <span>JavaScript</span>
             </p>
             <div class="projects__links">
-              <a href="" class="underline">View Project</a>
-              <a href="" class="underline">View Code</a>
+              <a href="https://github.com/Sweta716/WebDevelopment/tree/002748707_ShwetaMishra" class="underline">View Project</a>
+              <a href="https://github.com/Sweta716/WebDevelopment/tree/002748707_ShwetaMishra" class="underline">View Code</a>
             </div>
           </div>
 
@@ -184,8 +185,8 @@
               <span>JavaScript</span>
             </p>
             <div class="projects__links">
-              <a href="" class="underline">View Project</a>
-              <a href="" class="underline">View Code</a>
+              <a href="https://github.com/Sweta716/WebDevelopment/tree/002748707_ShwetaMishra" class="underline">View Project</a>
+              <a href="https://github.com/Sweta716/WebDevelopment/tree/002748707_ShwetaMishra" class="underline">View Code</a>
             </div>
           </div>
 
@@ -202,8 +203,8 @@
               <span>JavaScript</span>
             </p>
             <div class="projects__links">
-              <a href="" class="underline">View Project</a>
-              <a href="" class="underline">View Code</a>
+              <a href="https://github.com/Sweta716/WebDevelopment/tree/002748707_ShwetaMishra" class="underline">View Project</a>
+              <a href="https://github.com/Sweta716/WebDevelopment/tree/002748707_ShwetaMishra" class="underline">View Code</a>
             </div>
           </div>
         </div>
