--- a/Assignment2/portfolio/index.html
+++ b/Assignment2/portfolio/index.html
@@ -267,6 +267,7 @@
 <hr>
 <iframe width="420" height="345" src="https://www.youtube.com/embed/tgbNymZ7vqY?playlist=tgbNymZ7vqY&loop=1">
 </iframe>
+<a href="assets/images/Shweta_Resume.pdf" target="_blank">Download Resume</a>
 <hr>
   <footer class="footer bg-less-dark">
     <h2 class="visually-hidden">Footer</h2>
