--- a/Assignment-3/Assignment-3/table.html
+++ b/Assignment-3/Assignment-3/table.html
@@ -95,14 +95,14 @@
 	<button id="button" onclick = "submitButton()" disabled='disabled'>SUBMIT SELECTED AWARDS</button>
 	<button id="add" onclick="addRow()">Add New Student</button>
 
-	<!-- <nav class="socialmediaicons">
+	<nav class="socialmediaicons">
 		<ul>
 			<li><a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook" width="70px" height="50px"></a></li>
 			<li><a href="https://twitter.com/"><img src="images/twitter.png" alt="Twitter" width="70px" height="50px"></a></li>
 			<li><a href="https://www.linkedin.com/"><img src="images/linkedin.png" alt="LinkedIn" width="70px" height="50px"></a></li>
 			<li><a href="https://www.youtube.com/"><img src="images/youtube.png" alt="YouTube" width="70px" height="50px"></a></li>
 		</ul>
-	</nav> -->
+	</nav>
 	<script src="script.js"></script>
 	
 </body>
