--- a/Assignment-3/Assignment-3/table.html
+++ b/Assignment-3/Assignment-3/table.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 
 <!-- Also read chapter 9 from slides - Regular Expressions -->
 
@@ -8,6 +8,12 @@
 	<link rel="stylesheet" type="text/css" href="table.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	
+	<style>
+		#myTable button[style*='display: none'] {
+		  display: none !important;
+		}
+	  </style>
+
 </head>
 <body>
 	<table id="myTable">
@@ -23,8 +29,8 @@
 			<th>DELETE</th>
 			<th>EDIT</th>
 		</tr>
-		<tr id="firstrow" style="background-color:white">
-			<td><input type="checkbox" id="checkBox" onclick="checkBoxClicked()" /><br /><br /><img onclick="downArrow()" src="down.png" width="25px" /></td>
+		<tr>
+			<td><input type="checkbox" onclick="showButtons(this)"/><br /><br /><img src="down.png" width="25px" /></td>
 			<td>Student 1</td>
 			<td>Teacher 1</td>
 			<td>Approved</td>
@@ -32,11 +38,11 @@
 			<td>TA</td>
 			<td>12345</td>
 			<td>100%</td>
-			<td><button onclick="deleteFirstRow()" id ="deleteBtn" style="display:none">Delete</button></td>
-			<td><button onclick="editFirstRow()" id ="editBtn" style="display:none">Edit</button></td>
+			<td><button onclick="deleteRow(this)" style="display: none">Delete</button></button></td>
+			<td><button onclick="showEditPopup(this)" style="display: none">Edit</button></td>
+			<td></td>
 		</tr>
-		<tr class="dropDownTextArea" id="firstArrow" style="display:none">
-			<td colspan="8">
+		<tr class="dropDownTextArea"><td colspan="8">
 			Advisor:<br /><br />
 			Award Details<br />
 			Summer 1-2014(TA)<br />
@@ -45,9 +51,8 @@
 			Comments:<br /><br /><br />
 			Award Status:<br /><br /><br />
 		</td></tr>
-		
-		<tr id="secondrow" style="background-color:white">
-			<td><input type="checkbox"  id="checkBox2" onclick="checkBoxClicked2()"/><br /><br /><img onclick="downArrow2()" src="down.png" width="25px" /></td>
+	
+			<td><input type="checkbox" onclick="showButtons(this)"/><br /><br /><img src="down.png" width="25px" /></td>
 			<td>Student 2</td>
 			<td>Teacher 2</td>
 			<td>Approved</td>
@@ -55,10 +60,11 @@
 			<td>TA</td>
 			<td>23456</td>
 			<td>100%</td>
-			<td><button onclick="deleteSecondRow()" id ="deleteBtn2" style="display:none">Delete</button></td>
-			<td><button onclick="editSecondRow()" id ="editBtn2" style="display:none">Edit</button></td>
+			<td><button onclick="deleteRow(this)" style="display: none">Delete</button></button></td>
+			<td><button onclick="showEditPopup(this)" style="display: none">Edit</button></td>
+			<td></td>
 		</tr>
-		<tr class="dropDownTextArea" id="SecondArrow" style="display:none"><td colspan="8">
+		<tr class="dropDownTextArea"><td colspan="8">
 			Advisor:<br /><br />
 			Award Details<br />
 			Summer 1-2014(TA)<br />
@@ -67,8 +73,8 @@
 			Comments:<br /><br /><br />
 			Award Status:<br /><br /><br />
 		</td></tr>
-		<tr id="thirdrow" style="background-color:white">
-			<td><input type="checkbox" id="checkBox3" onclick="checkBoxClicked3()"/><br /><br /><img onclick="downArrow3()" src="down.png" width="25px" /></td>
+		<tr>
+			<td><input type="checkbox" onclick="showButtons(this)"/><br /><br /><img src="down.png" width="25px" /></td>
 			<td>Student 3</td>
 			<td>Teacher 3</td>
 			<td>Approved</td>
@@ -76,10 +82,11 @@
 			<td>TA</td>
 			<td>34567</td>
 			<td>100%</td>
-			<td><button onclick="deleteThirdRow()" id ="deleteBtn3" style="display:none">Delete</button></td>
-			<td><button onclick="editThirdRow()" id ="editBtn3" style="display:none">Edit</button></td>
+		    <td><button onclick="deleteRow(this)" style="display: none">Delete</button></button></td>
+			<td><button onclick="showEditPopup(this)" style="display: none">Edit</button></td>
+			<td></td>
 		</tr>
-		<tr class="dropDownTextArea" id="ThirdArrow" style="display:none"><td colspan="8">
+		<tr class="dropDownTextArea"><td colspan="8">
 			Advisor:<br /><br />
 			Award Details<br />
 			Summer 1-2014(TA)<br />
@@ -88,22 +95,73 @@
 			Comments:<br /><br /><br />
 			Award Status:<br /><br /><br />
 		</td></tr>
+
 	</table>
-
 	<br /><br />
-	
-	<button id="button" onclick = "submitButton()" disabled='disabled'>SUBMIT SELECTED AWARDS</button>
-	<button id="add" onclick="addRow()">Add New Student</button>
 
-	<nav class="socialmediaicons">
-		<ul>
-			<li><a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook" width="70px" height="50px"></a></li>
-			<li><a href="https://twitter.com/"><img src="images/twitter.png" alt="Twitter" width="70px" height="50px"></a></li>
-			<li><a href="https://www.linkedin.com/"><img src="images/linkedin.png" alt="LinkedIn" width="70px" height="50px"></a></li>
-			<li><a href="https://www.youtube.com/"><img src="images/youtube.png" alt="YouTube" width="70px" height="50px"></a></li>
-		</ul>
-	</nav>
+	<button id="button">SUBMIT SELECTED AWARDS</button>
+	<button id="add">Add New Student</button>
+
+	<nav class="socialmediaicons"></nav>
 	<script src="script.js"></script>
+
 	
+ <!-- <script>
+	function deleteRow(btn) {
+	  var row = btn.parentNode.parentNode;
+	  row.parentNode.removeChild(row);
+	  alert("Row deleted successfully");
+	}
+  </script> -->
+
+<!-- 
+<script>
+	function showEditPopup(element) {
+	  alert("Edit the details");
+	}
+  </script> -->
+
+<!-- <style>
+	.dropDownTextArea {
+	  display: none;
+	}
+  </style> -->
+
+  <!-- <script>
+      function toggleVisibility() {
+        let dropDownTextArea = document.getElementById("dropDownTextArea");
+        if (dropDownTextArea.style.display === "none") {
+          dropDownTextArea.style.display = "block";
+        } else {
+          dropDownTextArea.style.display = "none";
+        }
+      }
+    </script> -->
+
+<!-- 
+<script>
+    function showButtons(checkbox) {
+      var row = checkbox.parentNode.parentNode;
+      var deleteButton = row.querySelector("button[onclick='deleteRow(this)']");
+      var editButton = row.querySelector("button[onclick='showEditPopup(this)']");
+
+  if (checkbox.checked) {
+    deleteButton.style.display = "block";
+    editButton.style.display = "block";
+  } else {
+    deleteButton.style.display = "none";
+    editButton.style.display = "none";
+  }
+}
+  </script> -->
+  <nav class="socialmediaicons">
+	<ul>
+		<li><a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook" width="70px" height="50px"></a></li>
+		<li><a href="https://twitter.com/"><img src="images/twitter.png" alt="Twitter" width="70px" height="50px"></a></li>
+		<li><a href="https://www.linkedin.com/"><img src="images/linkedin.png" alt="LinkedIn" width="70px" height="50px"></a></li>
+		<li><a href="https://www.youtube.com/"><img src="images/youtube.png" alt="YouTube" width="70px" height="50px"></a></li>
+	</ul>
+</nav>
+
 </body>
-</html>
+</html> 
