--- a/Assignment-3/Assignment-3/table.html
+++ b/Assignment-3/Assignment-3/table.html
@@ -1,167 +1,128 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 
 <!-- Also read chapter 9 from slides - Regular Expressions -->
 
 <html>
-<head>
-	<title>Table CheckList</title>
-	<link rel="stylesheet" type="text/css" href="table.css">
-	<link rel="stylesheet" type="text/css" href="style.css">
-	
-	<style>
-		#myTable button[style*='display: none'] {
-		  display: none !important;
-		}
-	  </style>
+  <head>
+    <title>Table CheckList</title>
+    <link rel="stylesheet" type="text/css" href="table.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <table id="myTable">
+      <thead>
+        <tr>
+          <th></th>
+          <th>STUDENT</th>
+          <th>ADVISOR</th>
+          <th>AWARD<br />STATUS</th>
+          <th>SEMESTER</th>
+          <th>TYPE</th>
+          <th>BUDGET<br />#</th>
+          <th>PERCENTAGE</th>
+        </tr>
+      </thead>
 
-</head>
-<body>
-	<table id="myTable">
-		<tr>
-			<th></th>
-			<th>STUDENT</th>
-			<th>ADVISOR</th>
-			<th>AWARD<br/>STATUS</th>
-			<th>SEMESTER</th>
-			<th>TYPE</th>
-			<th>BUDGET<br />#</th>
-			<th>PERCENTAGE</th>
-			<th>DELETE</th>
-			<th>EDIT</th>
-		</tr>
-		<tr>
-			<td><input type="checkbox" onclick="showButtons(this)"/><br /><br /><img src="down.png" width="25px" /></td>
-			<td>Student 1</td>
-			<td>Teacher 1</td>
-			<td>Approved</td>
-			<td>Fall</td>
-			<td>TA</td>
-			<td>12345</td>
-			<td>100%</td>
-			<td><button onclick="deleteRow(this)" style="display: none">Delete</button></button></td>
-			<td><button onclick="showEditPopup(this)" style="display: none">Edit</button></td>
-			<td></td>
-		</tr>
-		<tr class="dropDownTextArea"><td colspan="8">
-			Advisor:<br /><br />
-			Award Details<br />
-			Summer 1-2014(TA)<br />
-			Budget Number: <br />
-			Tuition Number: <br />
-			Comments:<br /><br /><br />
-			Award Status:<br /><br /><br />
-		</td></tr>
-	
-			<td><input type="checkbox" onclick="showButtons(this)"/><br /><br /><img src="down.png" width="25px" /></td>
-			<td>Student 2</td>
-			<td>Teacher 2</td>
-			<td>Approved</td>
-			<td>Fall</td>
-			<td>TA</td>
-			<td>23456</td>
-			<td>100%</td>
-			<td><button onclick="deleteRow(this)" style="display: none">Delete</button></button></td>
-			<td><button onclick="showEditPopup(this)" style="display: none">Edit</button></td>
-			<td></td>
-		</tr>
-		<tr class="dropDownTextArea"><td colspan="8">
-			Advisor:<br /><br />
-			Award Details<br />
-			Summer 1-2014(TA)<br />
-			Budget Number: <br />
-			Tuition Number: <br />
-			Comments:<br /><br /><br />
-			Award Status:<br /><br /><br />
-		</td></tr>
-		<tr>
-			<td><input type="checkbox" onclick="showButtons(this)"/><br /><br /><img src="down.png" width="25px" /></td>
-			<td>Student 3</td>
-			<td>Teacher 3</td>
-			<td>Approved</td>
-			<td>Fall</td>
-			<td>TA</td>
-			<td>34567</td>
-			<td>100%</td>
-		    <td><button onclick="deleteRow(this)" style="display: none">Delete</button></button></td>
-			<td><button onclick="showEditPopup(this)" style="display: none">Edit</button></td>
-			<td></td>
-		</tr>
-		<tr class="dropDownTextArea"><td colspan="8">
-			Advisor:<br /><br />
-			Award Details<br />
-			Summer 1-2014(TA)<br />
-			Budget Number: <br />
-			Tuition Number: <br />
-			Comments:<br /><br /><br />
-			Award Status:<br /><br /><br />
-		</td></tr>
+      <tbody>
+        <tr>
+          <td>
+            <input
+              type="checkbox"
+              onclick="onCheckBoxClick(this)"
+            /><br /><br /><img
+              src="down.png"
+              width="25px"
+              onclick="showDropDown(this)"
+            />
+          </td>
+          <td>Student 1</td>
+          <td>Teacher 1</td>
+          <td>Approved</td>
+          <td>Fall</td>
+          <td>TA</td>
+          <td>12345</td>
+          <td>100%</td>
+        </tr>
+        <tr class="dropDownTextArea">
+          <td colspan="8">
+            Advisor:<br /><br />
+            Award Details<br />
+            Summer 1-2014(TA)<br />
+            Budget Number: <br />
+            Tuition Number: <br />
+            Comments:<br /><br /><br />
+            Award Status:<br /><br /><br />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <input
+              type="checkbox"
+              onclick="onCheckBoxClick(this)"
+            /><br /><br /><img
+              src="down.png"
+              width="25px"
+              onclick="showDropDown(this)"
+            />
+          </td>
+          <td>Student 2</td>
+          <td>Teacher 2</td>
+          <td>Approved</td>
+          <td>Fall</td>
+          <td>TA</td>
+          <td>23456</td>
+          <td>100%</td>
+        </tr>
+        <tr class="dropDownTextArea">
+          <td colspan="8">
+            Advisor:<br /><br />
+            Award Details<br />
+            Summer 1-2014(TA)<br />
+            Budget Number: <br />
+            Tuition Number: <br />
+            Comments:<br /><br /><br />
+            Award Status:<br /><br /><br />
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <input
+              type="checkbox"
+              onclick="onCheckBoxClick(this)"
+            /><br /><br /><img
+              src="down.png"
+              width="25px"
+              onclick="showDropDown(this)"
+            />
+          </td>
+          <td>Student 3</td>
+          <td>Teacher 3</td>
+          <td>Approved</td>
+          <td>Fall</td>
+          <td>TA</td>
+          <td>34567</td>
+          <td>100%</td>
+        </tr>
+        <tr class="dropDownTextArea">
+          <td colspan="8">
+            Advisor:<br /><br />
+            Award Details<br />
+            Summer 1-2014(TA)<br />
+            Budget Number: <br />
+            Tuition Number: <br />
+            Comments:<br /><br /><br />
+            Award Status:<br /><br /><br />
+          </td>
+        </tr>
+      </tbody>
+    </table>
 
-	</table>
-	<br /><br />
+    <br /><br />
 
-	<button id="button">SUBMIT SELECTED AWARDS</button>
-	<button id="add">Add New Student</button>
+    <button id="button">SUBMIT SELECTED AWARDS</button>
+    <button id="add" onclick="addNewRow()">Add New Student</button>
 
-	<nav class="socialmediaicons"></nav>
-	<script src="script.js"></script>
-
-	
- <!-- <script>
-	function deleteRow(btn) {
-	  var row = btn.parentNode.parentNode;
-	  row.parentNode.removeChild(row);
-	  alert("Row deleted successfully");
-	}
-  </script> -->
-
-<!-- 
-<script>
-	function showEditPopup(element) {
-	  alert("Edit the details");
-	}
-  </script> -->
-
-<!-- <style>
-	.dropDownTextArea {
-	  display: none;
-	}
-  </style> -->
-
-  <!-- <script>
-      function toggleVisibility() {
-        let dropDownTextArea = document.getElementById("dropDownTextArea");
-        if (dropDownTextArea.style.display === "none") {
-          dropDownTextArea.style.display = "block";
-        } else {
-          dropDownTextArea.style.display = "none";
-        }
-      }
-    </script> -->
-
-<!-- 
-<script>
-    function showButtons(checkbox) {
-      var row = checkbox.parentNode.parentNode;
-      var deleteButton = row.querySelector("button[onclick='deleteRow(this)']");
-      var editButton = row.querySelector("button[onclick='showEditPopup(this)']");
-
-  if (checkbox.checked) {
-    deleteButton.style.display = "block";
-    editButton.style.display = "block";
-  } else {
-    deleteButton.style.display = "none";
-    editButton.style.display = "none";
-  }
-}
-  </script> -->
-  <nav class="socialmediaicons">
-	<ul>
-		<li><a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook" width="70px" height="50px"></a></li>
-		<li><a href="https://twitter.com/"><img src="images/twitter.png" alt="Twitter" width="70px" height="50px"></a></li>
-		<li><a href="https://www.linkedin.com/"><img src="images/linkedin.png" alt="LinkedIn" width="70px" height="50px"></a></li>
-		<li><a href="https://www.youtube.com/"><img src="images/youtube.png" alt="YouTube" width="70px" height="50px"></a></li>
-	</ul>
-</nav>
-
-</body>
-</html> 
+    <nav class="socialmediaicons"></nav>
+    <script src="script.js"></script>
+  </body>
+</html>
