--- a/Assignment-3/Assignment-3/table.html
+++ b/Assignment-3/Assignment-3/table.html
@@ -20,6 +20,8 @@
           <th>TYPE</th>
           <th>BUDGET<br />#</th>
           <th>PERCENTAGE</th>
+		  <!-- <td><button onclick="deleteRow(this)" style="display: none">Delete</button></button></td>
+		<td><button onclick="showEditPopup(this)" style="display: none">Edit</button></td> -->
         </tr>
       </thead>
 
