--- a/Assignment-3/Assignment-3/table.html
+++ b/Assignment-3/Assignment-3/table.html
@@ -20,8 +20,9 @@
           <th>TYPE</th>
           <th>BUDGET<br />#</th>
           <th>PERCENTAGE</th>
-		  <!-- <td><button onclick="deleteRow(this)" style="display: none">Delete</button></button></td>
-		<td><button onclick="showEditPopup(this)" style="display: none">Edit</button></td> -->
+          <th style="display: none ">Delete</th>
+          <th style="display: none">Edit </th>
+
         </tr>
       </thead>
 
@@ -124,7 +125,15 @@
     <button id="button">SUBMIT SELECTED AWARDS</button>
     <button id="add" onclick="addNewRow()">Add New Student</button>
 
-    <nav class="socialmediaicons"></nav>
+    
+    <nav class="socialmediaicons">
+      <ul>
+        <li><a href="https://www.facebook.com/"><img src="images/facebook.png" alt="Facebook" width="70px" height="50px"></a></li>
+        <li><a href="https://twitter.com/"><img src="images/twitter.png" alt="Twitter" width="70px" height="50px"></a></li>
+        <li><a href="https://www.linkedin.com/"><img src="images/linkedin.png" alt="LinkedIn" width="70px" height="50px"></a></li>
+        <li><a href="https://www.youtube.com/"><img src="images/youtube.png" alt="YouTube" width="70px" height="50px"></a></li>
+      </ul>
+    </nav>
     <script src="script.js"></script>
   </body>
 </html>
