--- a/Assignment 4/Assignment4/Form.html
+++ b/Assignment 4/Assignment4/Form.html
@@ -124,7 +124,7 @@
 
             <div class="drinkData">
                     <label for="checkDrink"></label>
-                    <input type="checkbox" id="drinkCheckBox" name="checkDrink" onchange="onCheck(this)">
+                    <input type="checkbox" id="drinkCheckBox" name="checkDrink" onchange="onCheck(this)" required>
                     <span id="selectText">Test is here</span>
                     <label for=""></label>
                     <input type="text" id="dynamicCheckText" name="drinkValue" placeholder="Add Content">
