make stopwatch css

--- a/Assignment 6/Assignment 6/PartB/watch.html
+++ b/Assignment 6/Assignment 6/PartB/watch.html
@@ -14,8 +14,8 @@
   <body>
     <div id="Watch-body">
       <span id="stopwatch">00:00:00</span><br />
-      <a id="start-pause">START</a>
-      <a id="reset">RESET</a>
+      <button id="start-stop">START</button>
+      <button id="reset">RESET</button>
     </div>
     
     <div class="ball" id="black"></div>
