--- a/Assignment 6/Assignment 6/PartA/login.html
+++ b/Assignment 6/Assignment 6/PartA/login.html
@@ -6,7 +6,7 @@
 </head>
 <body>
         <div class="container">
-            <form id="signup" class="form" onclick="myfunction()" action="cal.html">
+            <form id="signup" class="form" onclick="myfunction()" action="calculator.html">
                 <h1>Sign Up</h1>
                 <div class="form-field">
                     <label for="username">Username:</label>
@@ -41,7 +41,7 @@
     
      
 
-    <script src="./app.js"></script>
+    <script src="./login.js"></script>
 </body>
 
 </html>
