--- a/Assignment7/index.html
+++ b/Assignment7/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/dist/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <title>State Bank of India</title>
   </head>
@@ -25,7 +25,7 @@
 
       <nav class="container container--pall flex flex-jc-sb flex-ai-c">
         <a href="/" class="header__logo">
-          <img src="images/logo1.svg" alt="Easybank" />
+          <img src="images/logo.png" alt="Coffee" />
         </a>
 
         <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
@@ -58,9 +58,9 @@
         <div class="hero__image"></div>
 
         <div class="hero__text container--pall">
-          <h1>We make your payments way easier!!</h1>
+          <h1>We make your coffee tasty!!</h1>
           <p>
-            Invest , Your money are in safe hands but just come after the lunch break!!.
+            You can join for a coffee date 
           </p>
           <a href="#" class="button hero__cta">Send Referral</a>
         </div>
@@ -70,53 +70,48 @@
     <section class="feature">
       <div class="feature__content container container--pall">
         <div class="feature__intro">
-          <h2>Why choose SBI?</h2>
+          <h2>Why choose Java?</h2>
           <p>
-            We leverage Open Banking to turn your bank account into your
-            financial hub. Control your finances like never before.
+           We brew our coffee and make it tasty and chocolaty. We do it with love and good coffee beans. 
           </p>
         </div>
 
         <div class="feature__grid">
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="/images/icons8-man-browser-window-80.png" />
+              <img src="/images/coffee-icon.png" width="100" height="100"/>
             </div>
-            <div class="feature__title">Online Banking</div>
+            <div class="feature__title">Online ordering</div>
             <div class="feature__description">
-              Our modern web and mobile applications allow you to keep track of
-              your finances wherever you are in the world.
+              Our modern web and mobile applications allow you order online. get tasty and microwave it at home.
             </div>
           </div>
 
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="/images/icons8-accounting-80.png" />
+              <img src="/images/coffe-icon2.png" width="100" height="100"/>
             </div>
-            <div class="feature__title">Simple Budgeting</div>
+            <div class="feature__title">Munching and Snacking</div>
             <div class="feature__description">
-              See exactly where your money goes each month. Receive
-              notifications when you’re close to hitting your limits.
+             Simple munching options and snacking varities from all over the world is kept in our shelves. Come and have a taste that melts in your mouth. 
             </div>
           </div>
 
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="/images/icons8-mobile-shopping-80.png" />
+              <img src="/images/coffee-icon3.png" width="100" height="100"/>
             </div>
-            <div class="feature__title">Fast Onboarding</div>
+            <div class="feature__title">Fast Delivery</div>
             <div class="feature__description">
-              We don’t do branches. Open your account in minutes online and
-              start taking control of your finances right away.
+              We don’t do slow. We are quick and efficient and have a great customer service. 
             </div>
           </div>
 
           <div class="feature__item">
-            <div class="feature__icon"><img src="/images/icons8-cursor-in-window-80.png" /></div>
-            <div class="feature__title">Open API</div>
+            <div class="feature__icon"><img src="/images/coffe-icon4.png" width="100" height="100"/></div>
+            <div class="feature__title">Indian Tea</div>
             <div class="feature__description">
-              Manage your savings, investments, pension, and much more from one
-              account. Tracking your money has never been easier.
+              While coffee is our moto but the indian tea with ginger and cardimom is what we offer. Our speciality is variety of the indian tea. 
             </div>
           </div>
         </div>
@@ -125,22 +120,21 @@
 
     <section class="articles">
       <div class="article__content container container--pall">
-        <h2>Recent banking details</h2>
+        <h2>Comments</h2>
 
         <div class="article__grid">
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-currency.jpg')"
+              style="background-image: url('/images/image-coffee.jpg')"
             ></div>
             <div class="article__text">
-              <div class="article__author">By Pranav Kapoor</div>
+              <div class="article__author">By Smita Mishra</div>
               <div class="article__title">
-                Receive money in any currency with no fees
+                Have a fun evening and Java shop
               </div>
               <div class="article__description">
-                The world is getting smaller and we’re becoming more mobile. So
-                why should you be forced to only receive money in a single …
+                The world is getting smaller and we’re becoming more mobile.We can order more and have more of the deliciesious fun coffee
               </div>
             </div>
           </a>
@@ -151,13 +145,12 @@
               style="background-image: url('/images/image-restaurant.jpg')"
             ></div>
             <div class="article__text">
-              <div class="article__author">By Pranav Dhongad</div>
+              <div class="article__author">By Vivek Mishra</div>
               <div class="article__title">
                 Treat yourself without worrying about money
               </div>
               <div class="article__description">
-                Our simple budgeting feature allows you to separate out your
-                spending and set realistic limits each month. That means you …
+                There's nothing like a warm cup of coffee to start the day off right. This blend is smooth and rich with just the right amount of boldness. It's the perfect pick-me-up!
               </div>
             </div>
           </a>
@@ -165,16 +158,15 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-plane.jpg')"
+              style="background-image: url('/images/image-coffee4.jpg')"
             ></div>
             <div class="article__text">
-              <div class="article__author">By Panth Shah</div>
+              <div class="article__author">By Palash Shah</div>
               <div class="article__title">
-                Take your digital SBI Application wherever you go
+                Take it on the go and enjoy wherever you go
               </div>
               <div class="article__description">
-                We want you to enjoy your travels. This is why we don’t charge
-                any fees on purchases while you’re abroad. We’ll even show you …
+                Sometimes all you need is a cozy cup of coffee to unwind after a long day. This decaf option is just as flavorful as its caffeinated counterparts, without keeping me up all night. It's the perfect way to relax and indulge in a little self-care.
               </div>
             </div>
           </a>
@@ -182,17 +174,15 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-confetti.jpg')"
+              style="background-image: url('/images/image-coffee3.jpeg')"
             ></div>
             <div class="article__text">
-              <div class="article__author">By Yashashree Patel</div>
+              <div class="article__author">By Shweta Patel</div>
               <div class="article__title">
-                Our invite-only Beta accounts are now live!
+               The best dating spot
               </div>
               <div class="article__description">
-                After a lot of hard work by the whole team, we’re excited to
-                launch our closed beta. It’s easy to request an invite through
-                the site …
+                I love trying different types of coffee, and this one is definitely unique. The flavors are complex and intriguing, with hints of caramel and chocolate. It's a coffee lover's dream!
               </div>
             </div>
           </a>
@@ -203,7 +193,7 @@
     <footer class="footer">
       <div class="container">
         <a class="footer__logo" href="#">
-          <img src="/images/logo1.svg" style="height: 50px; width: 50px;" />
+          <img src="/images/logo.png" style="height: 90px; width: 90px;" />
         </a>
 
         <div class="footer__social">
@@ -271,7 +261,7 @@
         </div>
 
         <div class="footer__copyright">
-          &copy; SBI INDIA
+          &copy; Java Coffee
         </div>
       </div>
      
